<resources>
    <string name="app_name">MyProject</string>
    <string name="login">Login</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="new_register">New Register</string>
    <string name="new_customer_create_an_account">NEW CUSTOMER PLEASE CREATE ACCOUNT</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_Password">Create Password</string>
    <string name="re_enter_Passord">Re enter Password</string>
    <string name="register">Register</string>
    <string name="if_already_register_goto_login">If already register please login</string>
    <string name="register_page">Register Page</string>
    <string name="if_already_register_goto">If already register please</string>
    <string name="new_customer">New customer</string>
    <string name="create_account">create account</string>
    <string name="offers_page">Offers</string>
    <string name="logout">log out</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome">Welcome</string>
</resources>
